@@ -1,6 +1,10 @@
 Changelog
 ---------
 
+In next release
+
+- Do not bind template to a trivial instance. [malthe]
+
 1.0b10 (2009/02/24)
 ~~~~~~~~~~~~~~~~~~~
 
